--- a/.env
+++ b/.env
@@ -27,8 +27,8 @@ REDIS_PORT=6379
 MAIL_DRIVER='smtp'
 MAIL_HOST='smtp.gmail.com'
 MAIL_PORT=587
-MAIL_USERNAME='jyla5102555@gmail.com'
-MAIL_PASSWORD='//*lastbreathjoylita*//@'
+MAIL_USERNAME='demo@gmail.com'
+MAIL_PASSWORD='123456789'
 MAIL_ENCRYPTION=tls
 MAIL_FROM_NAME="${APP_NAME}"
 # MAIL_DRIVER='smtp'
